@@ -918,7 +918,9 @@ class ProjectTest(fixtures.FixturedUnitTest):
         db.commit()
         rel1 = client.getPublishedRelease(1)
         rel2 = client.getPublishedRelease(2)
-        rel2.unpublish()
+        # don't try to remove trove access during unpub since the trove doesn't
+        # really exist
+        rel2.unpublish(unpubtorus=False)
         rel2.removeBuild(2)
         rel1.addBuild(2)
 
